<resources>
    <!--GLOBAL-->
    <!--logout-->
    <string name="logout_title"> Logout ?</string>
    <string name="logout_positive">Yes</string>
    <string name="logout_negative">No</string>
    <!--exit-->
    <string name="exit_title">Exit ?</string>
    <string name="exit_positive">Yes</string>
    <string name="exit_negative">No</string>
    <!-- for mprogess dialog-->
    <string name="mprogress_title">Processing...</string>
    <string name="mprogress_msg">Please Wait</string>
    <string name="report_including">Including</string>
    <!--for Login and title xml-->
    <string name="app_name" translatable="false">HAMS</string>
    <string name="login_spinner_textview">Select User Type</string>
    <string name="login_main_title">Login</string>
    <string name="login_userid_hint">User Id</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_text">Login</string>

    <!--login java toast-->
    <string name="login_toast_utype">Please Select User Type </string>
    <string name="login_toast_incorrect_credentials">Incorrect User ID Or Password</string>
    <string name="login_toast_offline">You Are Offline  Please Check Your Internet And Retry</string>
    <!--login setError-->
    <string name="login_setError_uname">User ID Required</string>
    <string name="login_setError_password">"Password Required"</string>
    <!--for warden home-->
    <string name="warden_name_plate" translatable="false">Welcome,Warden</string>
    <string name="student_name_plate" translatable="false">Welcome,</string>
    <string name="warden_home_attendance">Attendance</string>
    <string name="warden_home_report">Report</string>
    <string name="warden_home_register">Register</string>
    <string name="warden_home_list">List</string>
    <string name="warden_home_account">Account</string>
    <string name="warden_home_logout">Logout</string>
    <!--for for attendance page xml-->
    <string name="attendance_title">Attendance</string>
    <string name="attendance_check_morning">Morning</string>
    <string name="attendance_check_evening">Evening</string>
    <string name="attendance_text_total">Total Students:</string>
    <string name="attendance_text_present">Present</string>
    <string name="attendance_text_absent">Absent</string>
    <string name="attendance_btn_submit">Submit</string>
    <!--for attendance java Toast -->
    <string name="attendance_toast_added_sucsess">Attendance Added Successfully</string>
    <string name="attendance_toast_added_failed">Error While Adding</string>
    <!--for register xml-->
    <string name="regiter_title">Register Student</string>
    <string name="register_hint_rollno">Roll No</string>
    <string name="register_student_name">Student Name</string>
    <string name="register_address">Address</string>
    <string name="register_contact">Contact No</string>
    <string name="register_email">Email ID</string>
    <string name="register_date_of_birth">Birth Date</string>
    <string name="register_student_uid">Student User ID</string>
    <string name="register_student_password">Password</string>
    <string name="register_register">Register</string>
    <!--for register java setError-->
    <string name="register_setError_rollno">RollNo Required</string>
    <string name="register_serError_sname">Student Name Required</string>
    <string name="register_setError_address">Address Required</string>
    <string name="register_setError_birthdate">Birthdate Required</string>
    <string name="register_setError_contact">Conatct Required</string>
    <string name="register_setError_email">Email Required</string>
    <string name="register_setError_uname">User ID Required</string>
    <string name="register_setError_password">Password Required</string>
    <!--for register java toast-->
    <string name="register_toast_select_dept">Select Department</string>
    <string name="register_toast_added_sucessfully">Added Successfully</string>
    <string name="register_toast_added_failed">Error While Adding</string>
    <string name="register_toast_select_sem">Select Semester</string>
    <!--for student report xml-->
    <string name="student_report_title">Report</string>
    <!--student report java toast-->
    <string name="student_report_toast_nodata">No Data Found</string>
    <!--webview html string-->
    <string name="html_overall_absent">Overall Absent</string>
    <string name="html_absent">Absent</string>
    <string name="html_present">Present</string>
    <string name="html_absent_datetime">Absent DateTime</string>
    <string name="html_morning">Morning</string>
    <string name="html_evening">Evening</string>
    <string name="html_overall">Overall</string>
    <string name="html_total_working_time">Number of Prayer Time</string>
    <string name="html_percentage">Percentage</string>
    <string name="html_rollno">RollNo</string>
    <string name="student_report">Student Report</string>
    <!--student maintain-->
    <string name="student_maintain_title">Student Details Maintain</string>
    <string name="student_maintain_rollno">Roll No</string>
    <string name="student_maintain_register">Register</string>
    <string name="student_maintain_delete">Delete</string>
    <string name="student_maintain_update">Update</string>
    <string name="student_maintain_reset">Reset Semester</string>
    <!--new warden-->
    <string name="newwarden_title">Add New Warden</string>
    <string name="newwarden_uid">Enter User ID</string>
    <string name="newwarden_submit">Submit</string>
    <!--student report-->
    <string name="stu_report_print">Print</string>
    <!--student detials update-->
    <string name="stu_update_title">Update Stu. Details</string>
    <!--student account manager-->
    <string name="stu_ac_title">Account Manager</string>
    <string name="stu_ac_current_password">Enter Current Password</string>
    <string name="stu_ac_new_password">Enter New Password</string>
    <string name="stu_ac_confirm_password">Confirm Password</string>
    <string name="stu_update">Update</string>
    <!--warden account-->
    <string name="warden_ac_title">Account Manager</string>
    <string name="warden_ac_cur_password">Enter Current Password</string>
    <string name="warden_ac_new_password">Enter New Password</string>
    <string name="warden_ac_cofirm_password">Confirm Password</string>
    <string name="warden_ac_add_new_warden">Add New Warden</string>
    <string name="enter_password">Enter Password</string>
    <string name="suhbmiy">Submit</string>
    <string-array name="userstype">
        <item>Choose..</item>
        <item>warden</item>
        <item>student</item>
    </string-array>
    <!--string array dept-->
    <string-array name="dept">
        <item>Choose</item>
        <item>AUDIO AND VISUAL</item>
        <item>ECONOMICS</item>
        <item>GUJARATI</item>
        <item>HISTORY</item>
        <item>M.C.A.</item>
        <item>M.S.W</item>
    </string-array>
    <string-array name="semester">
        <item>Choose</item>
        <item>SEM 1</item>
        <item>SEM 2</item>
        <item>SEM 3</item>
        <item>SEM 4</item>
        <item>SEM 5</item>
        <item>SEM 6</item>
    </string-array>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="welcome_to_hams">Welcome to HAMS</string>
    <string name="info_hamsgvp_com">info@hamsgvp.com</string>
    <string name="warden_fragment_attendance">Attendance</string>
    <string name="warden_fragment_student_list">Student List</string>
    <string name="warden_fragment_student_report">Student Report</string>
    <string name="warden_fragment_profile">Profile</string>
</resources>